[package]
name = "ch32v003-zk-j5x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.1.2", features = ["restore-state-u8"] }
panic-halt = "0.2.0"
qingke = "0.1.7"
qingke-rt = "0.1.7"

embedded-hal-1 = { version = "1.0.0", package = "embedded-hal" }
ch32v00x-hal = { version = "0.1.0", git = "https://github.com/Merisy-Thing/ch32v00x-hal.git", branch = "dev", features = ["ch32v003", "rt"] }

embassy-executor = { version="0.5.0", features=["arch-riscv32", "executor-thread", "integrated-timers", "task-arena-size-1024"] }
embassy-time = { version="0.3.0", features=["tick-hz-1_000"] }
embassy-time-driver = "0.1.0"
embassy-sync = "0.5.0"

heapless = { version = "0.8", default-features = false, features = ["portable-atomic"] }

static_cell = "2.0.0"
portable-atomic = "1.6.0"
embassy-futures = "0.1.1"

[profile.release]
strip = false
lto = true
opt-level = "s" # Optimize: 0 1 2 3 "s" "z"

[features]
default = ["time_driver_tim2"]
time_driver_tim2 = []
time_driver_systick = []
